# pyum

./: .env.sample  .gitignore  Cargo.toml  Makefile  README.md  devenv.nix  localhost:3306  sample.http
frontend/: fresh.gen.ts
frontend/routes/: _layout.tsx  _title.tsx
frontend/routes/admin_user/: new.tsx
frontend/routes/device/: edit.tsx  index.tsx
migration/src/: lib.rs  m20240801_000001_create_device_table.rs  m20240803_063030_create_admin_users_table.rs  m20240803_090516_add_created_at_and_updated_at_column_to_devices.rs  m20240803_221344_create_oauth2_client_secret.rs
migrations/2024-07-27-045928_create_devices/: down.sql  up.sql
src/: lib.rs  main.rs  middleware.rs  models.rs  schema.rs
src/backend/: .env.sample  Cargo.toml  ER.dio  README.md
src/backend/src/: lib.rs  main.rs
src/backend/src/templates/: index.html
src/backend/src/templates/pages/admin_user/: login.html  new.html
src/backend/src/templates/pages/device/: detail.html  index.html  new.html
src/backend/src/templates/partials/: head.html
src/backend/src/web/: auth.rs  middleware.rs  mod.rs  util.rs
src/backend/src/web/controllers/: admin_user.rs  capture.rs  device.rs  hello.rs  mod.rs  sensor.rs  sensor_event.rs  sensor_purpose.rs  session.rs
src/backend/src/web/routes/: mod.rs  protected.rs  published.rs
src/backend/src/web/routes/protected/: api.rs  mod.rs
src/backend/submodules/migration/src/: lib.rs  m20240803_063030_create_admin_user_table.rs  m20240803_064001_create_device_table.rs  m20240803_090516_add_created_at_and_updated_at_column_to_device.rs  m20240803_221344_create_oauth2_client_secret.rs  m20240903_212851_create_sensor_purpose.rs  m20240904_121407_create_sensor.rs
src/backend/submodules/model_entity/src/models/: mod.rs
src/backend/submodules/model_entity/src/models/admin_user/: model.rs  mutation.rs
src/backend/submodules/model_entity/src/models/device/: model.rs  query.rs
src/backend/submodules/model_entity/src/models/sensor/: model.rs
src/backend/submodules/model_entity/src/models/sensor_purpose/: model.rs  mutation.rs
src/backend/submodules/model_entity/src/models/session/: mutation.rs
src/frontend/: .env.sample  deno.json  fresh.gen.ts
src/frontend/enums/: HttpStatusCode.ts
src/frontend/islands/: Button.tsx
src/frontend/islands/capture/: DateClearButton.tsx  LimitationButton.tsx  LimitationClearButton.tsx  LimitationDataForm.tsx
src/frontend/requests/: admin_user.ts  capture.ts  device.ts  device.tsx  sensor.ts  sensor_event.ts  sensor_purpose.ts  session.ts
src/frontend/routes/: _footer.tsx  _head.tsx  _header.tsx  _middleware.ts  _middleware_test.ts
src/frontend/routes/admin_user/: login.tsx  new.tsx
src/frontend/routes/capture/: index.tsx
src/frontend/routes/device/: detail.tsx  index.tsx  new.tsx
src/frontend/routes/sensor/: index.tsx
src/frontend/routes/sensor_purpose/: index.tsx
src/frontend/types/effect/: mod.ts
src/frontend/types/request/: capture.ts  sensor.ts  sensor_event.ts  sensor_purpose.ts  util.ts
src/frontend/utils/effect/: option.ts
src/frontend/utils/mdn/: mod.ts
src/model_entity/: mod.rs
src/model_entity/admin_users/: admin_user.rs
src/model_entity/device/: mod.rs  model.rs
src/model_entity/devices/: device.rs  mod.rs  mutation.rs
src/model_entity/oauth2_client_secret/: mod.rs  model.rs  mutation.rs  oauth2_client_secret.rs
src/service/: query.rs
src/templates/: error.html  index.html  layout.html
src/templates/pages/: hello.html
src/templates/pages/admin_user/: login.html
src/templates/partials/: footer.html  head.html  header.html
src/web/: auth.rs  middleware.rs  protected.rs
src/web/controllers/: admin_user.rs  assets.rs  device.rs  hello.rs
src/web/routes/: mod.rs  protected.rs  published.rs
submodules/migration/: Cargo.toml  README.md
submodules/migration/src/: lib.rs  m20240801_000001_create_device_table.rs  m20240803_063030_create_admin_user_table.rs  m20240803_221344_create_oauth2_client_secret.rs  m20240814_125552_create_session.rs  main.rs
submodules/model_entity/: Cargo.toml
submodules/model_entity/src/: lib.rs  utils.rs
submodules/model_entity/src/admin_user/: model.rs  mutation.rs
submodules/model_entity/src/device/: model.rs  mutation.rs  query.rs
submodules/model_entity/src/models/: mod.rs
submodules/model_entity/src/models/admin_user/: model.rs  mutation.rs
submodules/model_entity/src/models/oauth2_client_secret/: model.rs
submodules/model_entity/src/models/session/: mutation.rs
submodules/model_entity/src/oauth2_client_secret/: model.rs  mutation.rs  query.rs
submodules/model_entity/src/session/: model.rs
submodules/model_entity/tests/: mock.rs  prepare.rs
submodules/model_entity_test/: Cargo.toml
submodules/oauth_gen/: Cargo.toml
submodules/oauth_gen/src/: main.rs
(+26 files in other folders)
