[package]
name = "pyum"
version = "0.1.0"
edition = "2021"

[dependencies]

sea-orm = { version = "1.0.0-rc.7", features = [
  "sqlx-mysql",
  "runtime-tokio-native-tls",
  "debug-print",
]}

dotenvy = "0.15"

axum = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.39.2", features = ["fs", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.11", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tower-cookies = "0.10.0"

anyhow = "1.0.75"
tera = "1.20.0"
thiserror = "1.0.63"
oauth2 = "4.4.2"
rand = "0.8.5"

model_entity = { path = "./submodules/model_entity" }
mime_guess = "2.0.5"
