[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]

sea-orm = { version = "1.1.0-rc.1", features = [
  "sqlx-mysql",
  "runtime-tokio-native-tls",
  "debug-print",
]}
dotenvy = "0.15"
axum = { version = "0.7.5", features=["macros"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.39.2", features = ["fs", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.11", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4.13", features = ["util"]}
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tower-sessions = "0.12.3"
anyhow = "1.0.75"
thiserror = "1.0.63"
oauth2 = "4.4.2"
rand = "0.8.5"
model_entity = { path = "./submodules/model_entity" }
mime_guess = "2.0.5"
http-body-util = "0.1.2"
tracing-appender = "0.2.3"
rstest = "0.22.0"
time = "0.3.36"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]
