[package]
name = "model_entity"
version = "0.1.0"
edition = "2021"

[dependencies]

sea-orm = { version = "1.1.0-rc.1", features = [
  "sqlx-mysql",
  "runtime-tokio-native-tls",
  "debug-print",
]}

dotenvy = "0.15"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.34", features = ["full"] }
anyhow = "1.0.75"
rand = "0.8.5"
bcrypt = "0.15.1"
chrono = "0.4.38"

[features]
mock = ["sea-orm/mock"]

[[test]]
name = "mock"
required-features = ["mock"]
