[package]
name = "model_entity_test"
version = "0.1.0"
edition = "2021"

[dependencies]

sea-orm = { version = "1.0.0-rc.7", features = [
  "sqlx-mysql",
  "runtime-tokio-native-tls",
  "debug-print",
  "macros",
  "tests-cfg",
  "mock"
]}

dotenvy = "0.15"

tokio = { version = "1.34", features = ["full"] }

anyhow = "1.0.75"

pyum = { path="../../../pyum" }
